--- a/posts/2016-02-06.md
+++ b/posts/2016-02-06.md
@@ -1,16 +1,16 @@
-## Differential privacy for non-experts
+## Differential privacy: An illustrated primer
 
 I recently mistakenly titled a fairly advanced post "Differential privacy for dummies", and at least a few folks expected introductory helpful material and instead found ... something else, let's say.
 
-So let's try and explain differential privacy for non-experts, somewhat clearly. Even for experts there are a few important points in here, which I think some of you have missed. We'll also work through an example where we see one way to evaluate the correlation coefficient of two datasets, which I know some authors are eager to see.
+So let's try and explain differential privacy for non-experts, somewhat clearly. Even for experts, there may be a few important points in here that you haven't seen before. We'll also work through some examples, including one way to evaluate the correlation coefficient of two datasets, which I know some authors are eager to see.
 
 ### Differential privacy
 
-There are a large number of definitions of privacy out there. Try and write down what privacy means to you, and you start to understand that it might be a little subtle to really nail down. Some of these definitions are philosophical, for example Warren and Brandeis ("the right to be let alone") or Tore Dalenius ("nothing new should be learned about you when one analyzes your data"). Some are more technical, and have markedly less concise quotes describing their intent. Each definition attempts to describe and motivate a certain flavor of privacy, and while this is an excellent scholarly pursuit, it doesn't immediately translate into helpful advice for the concerned data subject.
+There are a large number of definitions of privacy out there. Try and write down what privacy means to you, and you start to understand that it might be a little subtle to really nail down precisely. Some of these privacy definitions are philosophical, for example Warren and Brandeis ("the right to be let alone") or Tore Dalenius ("nothing new should be learned about you specifically when one analyzes your data"). Some are more technical, and have markedly less concise quotes describing their intent. Each definition attempts to describe and motivate a certain flavor of privacy, and while this is an excellent scholarly pursuit, it doesn't often translate into immediately helpful advice for the concerned data subject.
 
 Differential privacy is yet another privacy definition. It is certainly both philosophical and technical, but more importantly it is *actionable*: it directly attacks the specific concern data subjects have: what will be the consequences of my participation in this data set?
 
-Differential privacy guarantees that nothing that could not happen without access to your data will happen with access to your data. In fact it makes a stronger quantitative guarantee: The chance that *any specific thing* happens (really, anything at all) with access to your data is at most a multiple X of the chance it would happen without your data. That "multiple" X is part of the guarantee and it determines how much privacy you get: small values like 1.01 are pretty great, whereas values like 10.0 are less amazing but still non-trivial.
+Differential privacy guarantees that nothing that could not happen without access to your data will happen with access to your data. In fact it makes a stronger quantitative guarantee: The chance that *any specific thing* happens (really, anything at all) with access to your data is at most a multiple X of the chance it would happen without your data. That "multiple" X is part of the guarantee and it determines how much privacy you get: a value of 1.0 would be perfect privacy (which seems hard to achieve), small values like 1.01 are pretty great, whereas values like 10.0 are less amazing but still non-trivial.
 
 * Are you worried that by participating you might get more junk mail and phone calls? The expected number will increase by no more than a factor of X.
 
@@ -20,13 +20,15 @@ Differential privacy guarantees that nothing that could not happen without acces
 
 This is a fairly strong guarantee. In fact, it is a lot stronger than most people realize.
 
-### Differential privacy protects you from non-experts
+### Differential privacy protects you from privacy non-experts
 
 Almost all of the existing privacy definitions frame some sort of "privacy violation", and then argue one way or the other that such a violation couldn't happen. For example "re-identification" is when someone (typically a smart privacy expert) is able to link your private data back to your public identity. That could be a problem, but it isn't the only problem. Other definitions protect you from a hypothetical perfect mathematical reasoner with outside information who wants to know your private data (differential privacy does, for example). This is also good to guard against, but it isn't the only problem.
 
 Here is a problem that almost no privacy definitions guard against: you are a brown person living in rural America, and perhaps you happen to follow a conservative interpretation of Islam. You get a totally anonymous form to fill out, indicating yes or no about Islamism. There is no way to link back to who you are, no personally identifying information, nothing. How do you fill out the form?
 
-If the results are published, just the totals with no identifying information, and the number of Islamists in your town is greater than zero, you can bet that as the brownest person around you are going to get beat on by some good ol' boys right quick. They don't have a fancy education, they didn't re-link the published data with auxiliary side information, they saw some number they didn't like and figured they should do something about it. So, privacy accomplished? Which privacy philosopher do you have to thank for your new condition?
+If the results are published, just the totals with no identifying information, and the number of Islamists in your town is greater than zero, you can bet that as the brownest person around you are going to get beat on by some good ol' boys right quick. They don't have a fancy education, they didn't re-link the published data with auxiliary side information, they just saw some number they didn't like and figured they should do something about it. 
+
+So, privacy accomplished? Which privacy philosopher do you have to thank for your new condition?
 
 Differential privacy's strong guarantees protects you even from "non-experts". Your participation is protected from the malicious boss who needs *any* sort of evidence to can you, from the abusive spouse who is just looking for something to set them off, from the law enforcement officer who is going to raid whichever apartment seems the most suspicious. Differential privacy also protects you from that weird ass thing you had no idea would be a problem because really wtf who knew about that 20 years ago? It is pretty serious business.
 
@@ -46,7 +48,7 @@ There are a lot of "any"s up there. This is differential privacy being careful, 
 
 3. "any possible output": We don't know which outputs you are worried about making more or less likely. *You* probably don't know which outputs you are worried about making more or less likely. Best to be sure.
 
-There is only one thing that doesn't have an "any" in front of it, but it is a bit hidden in the definition. A randomized computation gets provided with random bits as input (imagine a random number generator) to help it make random choices. The computation *is* able to produce different outputs for different input data and bits. However, the number of different input bits for which some output gets produced cannot change too much. That number of bits is what determines the probability the randomized computation produces the output.
+There is only one thing that doesn't have an "any" in front of it, but it is a bit hidden in the definition. A randomized computation gets provided with random bits as input (imagine a random number generator) to help it make random choices. The randomized computation is actually a deterministic computation applied to input data and input "random" bits. The computation *is* allowed to produce different outputs for different input data and bits. However, the number of different input bits for which some output gets produced cannot change too much. That number of bits is what determines the probability that the randomized computation produces the output.
 
 Perhaps at this point you start to see the core issue with differential privacy: randomness. All non-trivial differentially private computations involve randomness, and the amount of randomness is probably (yup) going to increase as we want better and better privacy guarantees. Enormous gobs of randomness are great for privacy, but they are probably going to antagonize the nice folks who wanted to see the results of the computation in the first place. "Too bad", you might say, but if a privacy control isn't serving both parties, producers and consumers, you probably shouldn't have even bothered in the first place.
 
@@ -58,11 +60,16 @@ Imagine we want to count the number of records in our input dataset. That seems 
 
 A simple remedy is to add some random error to the reported count. To satisfy differential privacy, we need to add random error with the property that if I add or remove a record, changing the true answer by at most one, I don't cause any output to become more or less likely than by a factor of `exp(epsilon)`. Some answers *can* become more likely, just not by too much.
 
-The probability that we see any specific output `val` from our count is the probability that the error happens to be `val - count`. This probability could be a few things, but we need to make sure that it isn't too far from the probability for `val - (count + 1)`, because that is the probability we see `val` after we add a record to the dataset. Likewise, it can't be too far from `val - (count - 1)`. It turns out that these are the only constraints, and if we just try and make the probabilities get as small as possible for larger and larger error, we arrive at something called the [Laplace distribution](https://en.wikipedia.org/wiki/Laplace_distribution).
+The probability that we see any specific output `val` from our count is the probability that the error happens to be `val - count`. This probability could be a few things, but we need to make sure that it isn't too far from the probability for `val - (count + 1)`, because that is the probability we see `val` after we add a record to the dataset. Likewise, it can't be too far from `val - (count - 1)`. 
+
+	Pr[error = val] < Pr[error = val + 1] * exp(epsilon)
+	Pr[error = val] > Pr[error = val - 1] / exp(epsilon)
+
+It turns out that these are the only sorts of constraints, and if we just try and make the probabilities get as small as possible for larger and larger error, we arrive at something called the [Laplace distribution](https://en.wikipedia.org/wiki/Laplace_distribution).
 
 The Laplace distribution describes some random error that drops off exponentially quickly as we move away from zero. This "exponentially quickly" means that it is often quite small, but it also happens to exactly match the requirements we had up above for differential privacy. More specifically, we want its probabilities to drop off at a rate of `exp(epsilon)` for each unit from zero. The Laplace distribution with parameter `1.0/epsilon` does exactly that!
 
-So, do we get accurate counts or what? Not exactly accurate, as mentioned, but the probability that the count is wrong by more than `c/epsilon` is bounded by something like `exp(-c)`. So maybe you don't get to know the count to within `+/- 1.0/epsilon`, but the bounds aren't much fuzzier than that. If `epsilon` is 1/10, you shouldn't expect the count to be more than 100 wrong.
+So, do we get accurate counts or what? Not exactly accurate, as mentioned, but the probability that the count is wrong by more than `c/epsilon` is bounded by something like `exp(-c)`. So maybe you don't get to know the count to within `+/- 1.0/epsilon`, but the bounds aren't much fuzzier than that. If `epsilon` is 1/10, you should expect the count not to be more than 100 wrong.
 
 ### 100 is enormous! So many, um. units!
 
@@ -76,7 +83,7 @@ So let's look at the cumulative density functions for those A and B people. We'l
 
 ![cdf](https://github.com/frankmcsherry/blog/blob/master/assets/privacy/primer/cdf1.png)
 
-As expected, we see a sharp spike up at around 40%, which is good because we really don't expect to see values far away from that value.
+As expected, we see a sharp increase at around 40%, which is good because we really don't expect to see values far away from that value.
 
 Let's take a different view and ask about the distribution of *error*. When we draw a sample, how different is it from 40%? This is just taking those numbers up there and sliding the x-axis around, which isn't all that hard. We get to zoom in if we like, hoping to see fine detail around zero.
 
@@ -86,7 +93,9 @@ Now let's do the same thing with the Laplace distribution with parameter 10.0. T
 
 ![cdf](https://github.com/frankmcsherry/blog/blob/master/assets/privacy/primer/cdf3.png)
 
-So, the error we are introducing for 0.1-differential privacy isn't actually worse than the error inherent in this particular measurement process. In this case, it seems totally workable (at least, to me). The concentration is tighter near the correct answer, and a bit looser out in the tails (which should make sense with folks familiar with the Laplace and Gaussian distributions).
+So, the error we are introducing for 0.1-differential privacy isn't actually worse than the error inherent in this particular measurement process. In this particular case, it seems like it might actually be better. The concentration is tighter near the correct answer, and a bit looser out in the tails (which should make sense with folks familiar with the Laplace and Gaussian distributions).
+
+So we can count things, and get answers that are probably within the allowed error tolerance for people who count things.
 
 ### Something more sophisticated
 
@@ -122,7 +131,9 @@ To do our experiment we will want to compute the count, the mean, and the second
 
 ![cdf](https://github.com/frankmcsherry/blog/blob/master/assets/privacy/primer/cdf4.png)
 
-Because I am brave, and writing the text before doing experiments, I will say that while the constrast isn't as stark as with our counts up above, the error from differential privacy is not drastically worse than the inherent randomness of the standard deviation statistic. TODO: UPDATE; APPEND-ONLY.
+Because I am brave, I am writing the text before doing experiments. I will say that while the contrast isn't as clear as with our counts up above, the error from differential privacy is not drastically worse than the inherent randomness of the standard deviation statistic. TODO: UPDATE; APPEND-ONLY.
+
+Having done the measurements, I think it is fair to say that the error from differential privacy is absolutely worse than the inherent randomness of the standard deviation statistics. But, that's fine. We are providing good privacy (0.1) on a small-ish dataset (1,000 records), and the error isn't yet a complete disaster (coming up!). Instead, let's use this as a good example that if you have good privacy and limited data and don't try too hard, you get to eat some error. Omnomnomnom.
 
 Let's do a final sum, so that we can reach an interesting goal: the Pearson correlation coefficient.
 
@@ -130,7 +141,7 @@ Let's do a final sum, so that we can reach an interesting goal: the Pearson corr
 
 	The product moment is interesting, because if you subtract the product of the means of the coordinates, you get the covariance. The variance up above was just a special case where the two numbers in the pair were the same. Also, if you divide the covariance by each of the standard deviations (one for each coordinate) you get the Pearson product-moment correlation coefficient.
 
-Let's look at some data for the Pearson correlation coefficient. Perhaps we map our A and B people into the values -1 and 1, respectively, and want to know if there is a correlation between being A or B and being predisposed to chocolate.
+We'll look at some data for the correlation coefficient, but let's put it together as an actual routine.
 
 ### Can you show me how to do this?
 
@@ -205,7 +216,7 @@ Let's take a peek! Let's take our population of A and B people, and indicate A p
 
 ![cdf](https://github.com/frankmcsherry/blog/blob/master/assets/privacy/primer/cdf5.png)
 
-If instead A people always like chocolate (pairs (-1, 1)) and B people never like chocolate (pairs (1, -1)), we see should something else: a strong negative correlation.
+If instead A people always like chocolate and B people never like chocolate, we see should something else: a strong negative correlation (between "being B" and "liking chocolate").
 
 ![cdf](https://github.com/frankmcsherry/blog/blob/master/assets/privacy/primer/cdf6.png)
 
@@ -265,7 +276,7 @@ To whip up an instance of the exponential mechanism, you need to define two thin
 
 1.  You must identify a possible set of output values. 
 
-    In this case, lets use "32 bit integers" to represent the range from -1 to 1 (so we are mentally dividing our numbers by 2^32).
+    In this case, lets use "32 bit integers" to represent the range from -1 to 1 (so we are mentally dividing our numbers by 2^31).
 
 2.  You must provide a scoring function from (dataset, output value) to the real numbers with the property that it changes by at most one when you add or remove an input element.
 
@@ -291,15 +302,23 @@ Let's take 1,000 points uniform between -1 and 1, represented as `i32` values, a
 
 ![cdf](https://github.com/frankmcsherry/blog/blob/master/assets/privacy/primer/cdf11.png)
 
-It looks like we have most of our samples around the true median, but it is a bit hard to see the detail. Let's zoom in.
+This looks pretty good. Again our measurement introduces error that is roughly the same as the inherent randomness of the statistic itself, so we don't feel too bad.
+
+The measurement curve looks a bit herky-jerky though. What is going on?
+
+It turns out that the exponential mechanism is roughly following the contours of the data. Output values become less likely as we have more data points, rather than just because we move away from the correct answer. This seems ... irrelevant perhaps, until we think about much more tightly concentrated data.
+
+Let's pull all of our 1,000 samples in the interval [0.123, 0.124] and use the same mechanism; we won't tell it that the data aren't just in -1.0 to 1.0. The median should be around 0.1235. We have to zoom in to see the detail, so pay attention to the offset and scale of the x-axis.
 
 ![cdf](https://github.com/frankmcsherry/blog/blob/master/assets/privacy/primer/cdf12.png)
 
 Wow. Quite concentrated.
 
+The samples basically all lie within an interval about 0.00006 wide. The data were only concentrated in an interval 0.001 wide, and we took the measurement as if the data could be anywhere in the -1.0 to 1.0 interval. And we maintained 0.1-differential privacy, using only 1,000 samples. Pretty neat.
+
 #### Moar concentration
 
-The concentration above is actually about as *un*-concentrated as it gets. Let's look at another example, where the points are all exactly one value (maybe 0.4). In this case, every output other than exactly 0.4 splits the data very badly, and incurs a penalty of `-|data|`. If we have 1,000 samples, and that 1,000 goes up in an exponent, we could imagine something being very unlikely. Let's count it out:
+Let's look at another example, where the points are all exactly one value (maybe 0.4). In this case, every output other than exactly 0.4 splits the data very badly, and incurs a penalty of `-|data|`. If we have 1,000 samples, and that 1,000 goes up in an exponent, we could imagine something being very unlikely. Let's count it out:
 
 There are 2^32 possible output values, which is about `exp(22.18)`. All but one of these (0.4) get a probability proportional to `exp(-epsilon * 1,000 / 2)` which with `epsilon = 0.1` is `exp(-50)`. So the cumulative probability for non-0.4 outputs looks like `exp(-27.82)` at the moment. Technically, it needs to be this divided by one plus that, for normalization, but ... that is basically just the same number.
 
@@ -309,7 +328,7 @@ So, an `exp(-27.82)` chance of producing anything other than the true median. Th
 
 #### Generalizing
 
-There is a neat generalization of what we did above to a larger class of statistics. It doesn't always work as easily; median happened to be easy to compute, and computing things can be harder than defining them. That being said, for any statistic you have in mind, you can define:
+There is a neat generalization of what we did above to a larger class of statistics. It doesn't always work as easily; median happened to be easy to compute, and computing things can be harder than defining them. That being said, for any statistic you have in mind, you can define an instance of the exponential mechanism using:
 
 1.  The set of possible output values as the possible values of the statistic (whatever range it takes).
 
@@ -319,10 +338,10 @@ There is a neat generalization of what we did above to a larger class of statist
 
 This score function penalizes output values that would require large changes to the data to cause the value to come into effect. In the case of median, we need to change large amounts of data to get a far away median. Other stastics are less robust, but you still get useful computations. 
 
-For example, you can do "average of -1 to 1 value", like we did up above with Laplace noise, but here get much tighter concentration around the limits: if the value is current -1 (all points are themselves -1) then you have to change half the points to make zero possible. And you have to change all the points to move the average to 1. These would be exponentially unlikely as in the median example above.
+For example, you can do "average of -1 to 1 values", like we did up above with Laplace noise, but here get much tighter concentration around the limits: if the average value is currently -0.99 due to all points themselves being -0.99, then you may have to change a very large number of points to get the average to -0.999; at least 10% of them. To get the value to -1.0 you'd have to change all the points, which ends up with even more penalty. Despite -0.999 and -1.0 being somewhat close to -0.99, they end up with exponentially small probabilities in the size of the dataset (in this case).
 
-It is possible, though I don't know the answer, that you could apply this to the problem of the Pearson correlation coefficient that we studied above. It has a valid range of -1 to 1, and if you impose a bound on the magnitude of the records, you also get concentrated results that are especially concentrated at the limits of its valid range. 
+It is possible, though I don't know the answer, that you could apply this to the problem of the Pearson correlation coefficient that we studied above. It has a valid range of -1.0 to 1.0, and if you impose a bound on the magnitude of the records, you should also get concentrated results that are especially concentrated at the limits of its valid range. Plus you bypass the factor of six we ate indirectly computing all those moments.
 
-The hard part, unlike median and average, is determining how few records you need to change to reach a give value of the output. Is it piecewise linear and monotonically increasing as you move away from the true value? Can the break-points be easily determined? I don't know the answers to these, but they seem like good questions to ponder! 
+The hard part for general statistics, unlike median and average, is determining how few records you need to change to reach a given value of the output. Is it piecewise linear and monotonically increasing as you move away from the true value? Can the break-points be easily determined? I don't know the answers to these, even for the correlation coefficient, but they seem like good questions to ponder! 
 
 Research, ho!
