--- a/posts/2016-02-06.md
+++ b/posts/2016-02-06.md
@@ -224,7 +224,7 @@ Ok, we don't really see that, do we? We have enough questions here (six) that we
 
 ![cdf](https://github.com/frankmcsherry/blog/blob/master/assets/privacy/primer/cdf7.png)
 
-### Cumulative density functions
+<!-- ### Cumulative density functions
 
 We side-stepped an important point above, which was "how can we tell what range our data lies in?" This is a good and important question, because many differentially private estimators rely on the data being in a certain range for their accuracy (but they do not rely on this for privacy guarantees).
 
@@ -264,7 +264,7 @@ What we can do, however, is stitch together the three measurements we have taken
 
 In fact, given these three tiers of measurements, we can put together a count of the number of records less than any point out to two digits, using at most 12 other measurements (don't forget subtraction!). The errors in these twelve can partially cancel, and the privacy price we pay is just three times the cost of doing one count. In exchange, we get pretty much all counts (with more error).
 
-This process can be generalized to do powers of two rather than powers of ten, and the number of terms you ever need to add together is bounded by the logarithm (base two) of the largest absolute range you are considering minus the logarithm of the finest level of detail you want to know about. If we have a 64 bit number for our data, this means that we need to add together at most 64 noisy counts, and we have to ask only 64 questions. The associated error for each count looks like 64^{3/2} = 512, which is maybe scary, but you could dial that back a bit if you like. Also, these errors are relative to the number of records in your dataset (we are producing counts for *all* records less than a threshold, not just records in each bin).
+This process can be generalized to do powers of two rather than powers of ten, and the number of terms you ever need to add together is bounded by the logarithm (base two) of the largest absolute range you are considering minus the logarithm of the finest level of detail you want to know about. If we have a 64 bit number for our data, this means that we need to add together at most 64 noisy counts, and we have to ask only 64 questions. The associated error for each count looks like 64^{3/2} = 512, which is maybe scary, but you could dial that back a bit if you like. Also, these errors are relative to the number of records in your dataset (we are producing counts for *all* records less than a threshold, not just records in each bin). -->
 
 ### Other computations
 
