--- a/posts/2016-02-06.md
+++ b/posts/2016-02-06.md
@@ -306,6 +306,8 @@ This looks pretty good. Again our measurement introduces error that is roughly t
 
 The measurement curve looks a bit herky-jerky though. What is going on?
 
+#### Moar concentration
+
 It turns out that the exponential mechanism is roughly following the contours of the data. Output values become less likely as we have more data points, rather than just because we move away from the correct answer. This seems ... irrelevant perhaps, until we think about much more tightly concentrated data.
 
 Let's pull all of our 1,000 samples in the interval [0.123, 0.124] and use the same mechanism; we won't tell it that the data aren't just in -1.0 to 1.0. The median should be around 0.1235. We have to zoom in to see the detail, so pay attention to the offset and scale of the x-axis.
@@ -314,9 +316,9 @@ Let's pull all of our 1,000 samples in the interval [0.123, 0.124] and use the s
 
 Wow. Quite concentrated.
 
-The samples basically all lie within an interval about 0.00006 wide. The data were only concentrated in an interval 0.001 wide, and we took the measurement as if the data could be anywhere in the -1.0 to 1.0 interval. And we maintained 0.1-differential privacy, using only 1,000 samples. Pretty neat.
+The samples mostly all lie within an interval about 0.00006 wide. The data were only concentrated in an interval 0.001 wide, and we took the measurement as if the data could be anywhere in the -1.0 to 1.0 interval. And we maintained 0.1-differential privacy, using only 1,000 samples. Pretty neat.
 
-#### Moar concentration
+#### Even moar concentration
 
 Let's look at another example, where the points are all exactly one value (maybe 0.4). In this case, every output other than exactly 0.4 splits the data very badly, and incurs a penalty of `-|data|`. If we have 1,000 samples, and that 1,000 goes up in an exponent, we could imagine something being very unlikely. Let's count it out:
 
