--- a/posts/2016-02-06.md
+++ b/posts/2016-02-06.md
@@ -1,6 +1,6 @@
 ## Differential privacy: An illustrated primer
 
-I recently mistakenly titled a fairly advanced post "Differential privacy for dummies", and at least a few folks expected introductory helpful material and instead found ... something else, let's say.
+I recently mistakenly titled a fairly advanced post "[Differential privacy for dummies](https://github.com/frankmcsherry/blog/blob/master/posts/2016-02-03.md)", and at least a few folks expected introductory helpful material and instead found ... something else, let's say.
 
 So let's try and explain differential privacy for non-experts, somewhat clearly. Even for experts, there may be a few important points in here that you haven't seen before. We'll also work through some examples, including one way to evaluate the correlation coefficient of two datasets, which I know some authors are eager to see.
 
