--- a/posts/2016-02-06.md
+++ b/posts/2016-02-06.md
@@ -8,9 +8,13 @@ So let's try and explain differential privacy for non-experts, somewhat clearly.
 
 There are a large number of definitions of privacy out there. Try and write down what privacy means to you, and you start to understand that it might be a little subtle to really nail down precisely. Some of these privacy definitions are philosophical, for example Warren and Brandeis ("the right to be let alone") or Tore Dalenius ("nothing new should be learned about you specifically when one analyzes your data"). Some are more technical, and have markedly less concise quotes describing their intent. Each definition attempts to describe and motivate a certain flavor of privacy, and while this is an excellent scholarly pursuit, it doesn't often translate into immediately helpful advice for the concerned data subject.
 
-Differential privacy is yet another privacy definition. It is certainly both philosophical and technical, but more importantly it is *actionable*: it directly attacks the specific concern data subjects have: what will be the consequences of my participation in this data set?
+Differential privacy is yet another privacy definition. It is certainly both philosophical and technical, but more importantly it is *actionable*: it directly attacks the specific concern data subjects have: what will be the consequences of participation in this data set?
 
-Differential privacy guarantees that nothing that could not happen without access to your data will happen with access to your data. In fact it makes a stronger quantitative guarantee: The chance that *any specific thing* happens (really, anything at all) with access to your data is at most a multiple X of the chance it would happen without your data. That "multiple" X is part of the guarantee and it determines how much privacy you get: a value of 1.0 would be perfect privacy (which seems hard to achieve), small values like 1.01 are pretty great, whereas values like 10.0 are less amazing but still non-trivial.
+Differential privacy guarantees that nothing that could not happen without access to your data will happen with access to your data. 
+
+In fact it makes a stronger quantitative guarantee: The chance that *any specific thing* happens (really, anything at all) with access to your data is at most a multiple X of the chance it would happen without your data. That "multiple" X is part of the guarantee and it determines how much privacy you get: a value of 1.0 would be perfect privacy (which by definition ignores your data), small values like 1.01 are pretty great, whereas values like 10.0 are less amazing but still non-trivial.
+
+What sorts of things does differential privacy ensure don't happen now that couldn't happen before? Really, anything:
 
 * Are you worried that by participating you might get more junk mail and phone calls? The expected number will increase by no more than a factor of X.
 
@@ -20,17 +24,19 @@ Differential privacy guarantees that nothing that could not happen without acces
 
 This is a fairly strong guarantee. In fact, it is a lot stronger than most people realize.
 
-### Differential privacy protects you from privacy non-experts
+### Differential privacy even protects you from privacy non-experts
 
-Almost all of the existing privacy definitions frame some sort of "privacy violation", and then argue one way or the other that such a violation couldn't happen. For example "re-identification" is when someone (typically a smart privacy expert) is able to link your private data back to your public identity. That could be a problem, but it isn't the only problem. Other definitions protect you from a hypothetical perfect mathematical reasoner with outside information who wants to know your private data (differential privacy does, for example). This is also good to guard against, but it isn't the only problem.
+Almost all of the existing privacy definitions frame some sort of "privacy violation", and then argue one way or the other that such a violation couldn't happen. For example "re-identification" is when someone (typically a smart privacy expert) is able to link your private data back to your public identity. That could be a problem, but it isn't the only problem. Other definitions protect you from a hypothetical perfect mathematical reasoner with outside information who wants to know your private data (differential privacy does, for example). This is also good to guard against, but it isn't the only problem. Generally, smart well-informed statistically-minded people are not the problem (in life, generally).
 
-Here is a problem that almost no privacy definitions guard against: you are a brown person living in rural America, and perhaps you happen to follow a conservative interpretation of Islam. You get a totally anonymous form to fill out, indicating yes or no about Islamism. There is no way to link back to who you are, no personally identifying information, nothing. How do you fill out the form?
+Rather, here is a problem that almost no privacy definitions guard against: you are a brown person living in rural America, and perhaps you happen to follow a conservative interpretation of Islam. You get a totally anonymous form to fill out, indicating yes or no about Islamism. There is no way to link back to who you are, no personally identifying information, nothing. How do you fill out the form?
 
-If the results are published, just the totals with no identifying information, and the number of Islamists in your town is greater than zero, you can bet that as the brownest person around you are going to get beat on by some good ol' boys right quick. They don't have a fancy education, they didn't re-link the published data with auxiliary side information, they just saw some number they didn't like and figured they should do something about it. 
+If the results are published, just the totals with no identifying information, and the number of Islamists in your small town is greater than zero, you can bet that as the brownest person around you are going to get beat on by some good ol' boys right quick. They don't have a fancy education, they didn't re-link the published data with auxiliary side information, they didn't consult with the newest research on re-identification. They just saw some number they didn't like and figured they should do something about it. 
 
-So, privacy accomplished? Which privacy philosopher do you have to thank for your new condition?
+So, privacy accomplished? Which privacy philosopher do you have to thank for your new busted-ass condition?
 
-Differential privacy's strong guarantees protects you even from "non-experts". Your participation is protected from the malicious boss who needs *any* sort of evidence to can you, from the abusive spouse who is just looking for something to set them off, from the law enforcement officer who is going to raid whichever apartment seems the most suspicious. Differential privacy also protects you from that weird ass thing you had no idea would be a problem because really wtf who knew about that 20 years ago? It is pretty serious business.
+Differential privacy's strong guarantees protects you even from "non-experts". Your participation is protected from the malicious boss who needs *any* sort of evidence to can you, from the abusive spouse who is just looking for something to set them off, from the law enforcement officer who is going to raid whichever apartment seems the most suspicious. Differential privacy also protects you from that weird ass thing you had no idea would be a problem because really wtf who knew about that 20 years ago? It is pretty serious business. 
+
+Differential privacy can't promise you that you will have a long, happy, and uneventful life, but it can promise that participating in specific computations will not be the reason shitty things happen to you.
 
 ### Too good to be true?
 
