--- a/posts/2016-02-06.md
+++ b/posts/2016-02-06.md
@@ -36,7 +36,7 @@ So, privacy accomplished? Which privacy philosopher do you have to thank for you
 
 Differential privacy's strong guarantees protects you even from "non-experts". Your participation is protected from the malicious boss who needs *any* sort of evidence to can you, from the abusive spouse who is just looking for something to set them off, from the law enforcement officer who is going to raid whichever apartment seems the most suspicious. Differential privacy also protects you from that weird ass thing you had no idea would be a problem because really wtf who knew about that 20 years ago? It is pretty serious business. 
 
-Differential privacy can't promise you that you will have a long, happy, and uneventful life, but it can promise that participating in specific computations will not be the reason shitty things happen to you.
+Differential privacy can't promise you that you will have a long, happy, and uneventful life, but it can promise that participating in differentially private computations will not be the reason shitty things happen to you.
 
 ### Too good to be true?
 
